| Bug #20841 | mysqldump fails to store right info with --compatible=mysql40 option | ||
|---|---|---|---|
| Submitted: | 4 Jul 2006 3:46 | Modified: | 21 Sep 2006 2:16 |
| Reporter: | Nikolay Grishakin | Email Updates: | |
| Status: | Closed | ||
| Category: | Client | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Linux (Linux) |
| Assigned to: | Magnus Blaudd | Target Version: | |
| Tags: | Test blocking | ||
[4 Jul 2006 3:46]
Nikolay Grishakin
[24 Aug 2006 12:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10824 ChangeSet@1.2230, 2006-08-24 14:27:57+02:00, msvensson@neptunus.(none) +6 -0 Bug#20841 mysqldump fails to store right info with --compatible=mysql40 option - Add "not in version before" commensta around new syntax "WITH PARSER" and "TABLESPACE xxx STORAGE DISK"
[13 Sep 2006 8:40]
Timothy Smith
Pushed to 5.1.12
[21 Sep 2006 2:16]
Paul DuBois
Noted in 5.1.12 changelog. mysqldump did not add version-specific comments around WITH PARSER and TABLESPACE ... STORAGE DISK clauses for CREATE TABLE statements, causing the dump file to fail when loaded into older servers.
[5 Oct 2006 13:54]
Jonathan Miller
This patch has been verified through the new NDB upgrade/downgrade automation framework. /jeb
