Bug#20841 mysqldump fails to store right info with --compatible=mysql40 option  - Add "not in version before" commensta around new syntax "WITH PARSER" and "TABLESPACE xxx STORAGE DISK"

mysql-test/r/ndb_dd_advance.result:
  Update result file
mysql-test/r/ndb_dd_advance2.result:
  Update result file
mysql-test/r/ndb_dd_backuprestore.result:
  Update result file
mysql-test/r/ndb_dd_basic.result:
  Update result file
mysql-test/r/ndb_dd_disk2memory.result:
  Update result file
sql/sql_show.cc:
  Add "not in version before"  comments around "WITH PARSER xxx" and "TABLESPACE xxx STORAGE DISK"
  Use STRING_WITH_LEN when adding fixed string AUTO_INCREMENT= to output from SHOW TABLE